--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
 						<!--Packages excludes from the test-->
 						<exclude>**/com/utn/udee/*</exclude>
 						<exclude>**/com/utn/udee/config/*</exclude>
+						<exclude>**/com/utn/udee/model/dto/*</exclude>
 						<exclude>**/com/utn/udee/model/*</exclude>
 						<exclude>**/com/utn/udee/filter/*</exclude>
 					</excludes>
