--- a/pom.xml
+++ b/pom.xml
@@ -84,5 +84,73 @@
 			<artifactId>junit-jupiter-params</artifactId>
 		</dependency>
 	</dependencies>
+	<build>
+	<plugins>
+	<!--Jacoco for test coverage-->
+	<plugin>
+		<groupId>org.jacoco</groupId>
+		<artifactId>jacoco-maven-plugin</artifactId>
+		<version>0.8.2</version>
+		<configuration>
+			<excludes>
+				<!--Packages excludes from the test-->
+				<exclude>**/com/utn/udee/*</exclude>
+				<exclude>**/com/utn/udee/config/*</exclude>
+				<exclude>**/com/utn/udee/model/dto/*</exclude>
+				<exclude>**/com/utn/udee/model/*</exclude>
+				<exclude>**/com/utn/udee/filter/*</exclude>
+			</excludes>
+		</configuration>
+		<executions>
+			<execution>
+				<id>default-prepare-agent</id>
+				<goals>
+					<goal>prepare-agent</goal>
+				</goals>
+			</execution>
+			<!-- attached to Maven test phase -->
+			<execution>
+				<id>report</id>
+				<phase>test</phase>
+				<goals>
+					<goal>report</goal>
+				</goals>
+			</execution>
+			<execution>
+				<id>jacoco-check</id>
+				<phase>package</phase>
+				<goals>
+					<goal>check</goal>
+				</goals>
+				<configuration>
+					<rules>
+						<rule>
+							<element>BUNDLE</element>
+							<limits>
+								<limit>
+									<counter>INSTRUCTION</counter>
+									<value>COVEREDRATIO</value>
+									<minimum>0.01</minimum>
+								</limit>
+							</limits>
+						</rule>
+						<rule>
+							<element>BUNDLE</element>
+							<limits>
+								<limit>
+									<counter>BRANCH</counter>
+									<value>COVEREDRATIO</value>
+									<minimum>0.01</minimum>
+								</limit>
+							</limits>
+						</rule>
+					</rules>
+				</configuration>
+			</execution>
+		</executions>
+	</plugin>
+	</plugins>
+	</build>
+	
 
 </project>
