--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,12 @@
+
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/udee
+    url: jdbc:mysql://localhost:3306/udeebd?serverTimezone=UTC
     username: root
-    password: Minina
+    password: root
   jpa:
     hibernate:
       ddl-auto: none
+      dialect: org.hibernate.dialect.MySQLBDialect
+      driverClassName: com.mysql.cj.jdbc.Driver
+    database: mysql
